go/src/sort/heapsort-test/e
=====================================
time g++ -std=c++1y -O3 -Wall -Werror  -o hsccf hsccf.cc pl.c
hsccf.cc:39:10: error: variable or field ‘toLeaves’ declared void
 toLeaves(Vec& v, Index k, Index last) {
          ^~~
hsccf.cc:39:10: error: ‘Vec’ was not declared in this scope
hsccf.cc:39:10: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:6:31: note:   ‘hs::Vec’
 using Vec = std::vector<Value>;
                               ^
hsccf.cc:39:15: error: ‘v’ was not declared in this scope
 toLeaves(Vec& v, Index k, Index last) {
               ^
hsccf.cc:39:18: error: ‘Index’ was not declared in this scope
 toLeaves(Vec& v, Index k, Index last) {
                  ^~~~~
hsccf.cc:39:18: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:4:13: note:   ‘hs::Index’
 typedef int Index; //using Index = int;
             ^~~~~
hsccf.cc:39:27: error: ‘Index’ was not declared in this scope
 toLeaves(Vec& v, Index k, Index last) {
                           ^~~~~
hsccf.cc:39:27: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:4:13: note:   ‘hs::Index’
 typedef int Index; //using Index = int;
             ^~~~~
hsccf.cc:60:9: error: variable or field ‘heapify’ declared void
 heapify(Vec& v) {
         ^~~
hsccf.cc:60:9: error: ‘Vec’ was not declared in this scope
hsccf.cc:60:9: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:6:31: note:   ‘hs::Vec’
 using Vec = std::vector<Value>;
                               ^
hsccf.cc:60:14: error: ‘v’ was not declared in this scope
 heapify(Vec& v) {
              ^
hsccf.cc:71:15: error: variable or field ‘heapsort’ declared void
 void heapsort(Vec& v) {
               ^~~
hsccf.cc:71:15: error: ‘Vec’ was not declared in this scope
hsccf.cc:71:15: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:6:31: note:   ‘hs::Vec’
 using Vec = std::vector<Value>;
                               ^
hsccf.cc:71:20: error: ‘v’ was not declared in this scope
 void heapsort(Vec& v) {
                    ^
hsccf.cc:82:24: error: ‘Vec’ does not name a type; did you mean ‘getc’?
 void checkSorted(const Vec& v) {
                        ^~~
                        getc
hsccf.cc: In function ‘void checkSorted(const int&)’:
hsccf.cc:83:11: error: ‘Index’ does not name a type
     const Index last = v.size() - 1;
           ^~~~~
hsccf.cc:85:19: error: ‘Index’ was not declared in this scope
     for (auto k = Index(0); k < last-1; k++) {
                   ^~~~~
hsccf.cc:85:19: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:4:13: note:   ‘hs::Index’
 typedef int Index; //using Index = int;
             ^~~~~
hsccf.cc:85:33: error: ‘last’ was not declared in this scope
     for (auto k = Index(0); k < last-1; k++) {
                                 ^~~~
hsccf.cc:85:33: note: suggested alternative: ‘wait’
     for (auto k = Index(0); k < last-1; k++) {
                                 ^~~~
                                 wait
hsccf.cc: At global scope:
hsccf.cc:106:14: error: ‘Vec’ does not name a type; did you mean ‘getc’?
 prHeap(const Vec& v, Index k, const std::string& ident) {
              ^~~
              getc
hsccf.cc:106:22: error: ‘Index’ has not been declared
 prHeap(const Vec& v, Index k, const std::string& ident) {
                      ^~~~~
hsccf.cc: In function ‘void prHeap(const int&, int, const string&)’:
hsccf.cc:107:37: error: invalid types ‘const int[int]’ for array subscript
     std::cout << ident << " " << v[k] << "\n";
                                     ^
hsccf.cc:108:23: error: ‘Len’ was not declared in this scope
     const auto last = Len(v)-1;
                       ^~~
hsccf.cc:108:23: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:9:7: note:   ‘hs::Len’
 Index Len(const Vec& v) {
       ^~~
hsccf.cc:109:23: error: ‘leftCld’ was not declared in this scope
     const auto lCld = leftCld(k);
                       ^~~~~~~
hsccf.cc:109:23: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:25:14: note:   ‘hs::leftCld’
 inline Index leftCld(Index k) {
              ^~~~~~~
hsccf.cc:110:23: error: ‘rightCld’ was not declared in this scope
     const auto rCld = rightCld(k);
                       ^~~~~~~~
hsccf.cc:110:23: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:29:14: note:   ‘hs::rightCld’
 inline Index rightCld(Index k) {
              ^~~~~~~~
hsccf.cc: In function ‘int main(int, char**)’:
hsccf.cc:123:5: error: ‘Vec’ was not declared in this scope
     Vec v;
     ^~~
hsccf.cc:123:5: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:6:31: note:   ‘hs::Vec’
 using Vec = std::vector<Value>;
                               ^
hsccf.cc:124:5: error: ‘v’ was not declared in this scope
     v.resize(N);
     ^
hsccf.cc:125:26: error: ‘Len’ was not declared in this scope
     for (long i = 0; i < Len(v); i++) {
                          ^~~
hsccf.cc:125:26: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:9:7: note:   ‘hs::Len’
 Index Len(const Vec& v) {
       ^~~
hsccf.cc:128:16: error: ‘Value’ was not declared in this scope
         v[i] = Value(r % N);
                ^~~~~
hsccf.cc:128:16: note: suggested alternative:
In file included from hsccf.cc:5:
heap.h:5:18: note:   ‘hs::Value’
 using Value = int;
                  ^
hsccf.cc:132:5: error: ‘heapsort’ was not declared in this scope
     heapsort(v);
     ^~~~~~~~
hsccf.cc:132:5: note: suggested alternative: ‘qsort’
     heapsort(v);
     ^~~~~~~~
     qsort
hsccf.cc: At global scope:
hsccf.cc:106:1: error: ‘void prHeap(const int&, int, const string&)’ defined but not used [-Werror=unused-function]
 prHeap(const Vec& v, Index k, const std::string& ident) {
 ^~~~~~
cc1plus: all warnings being treated as errors
0.21user 0.03system 0:00.24elapsed 99%CPU (0avgtext+0avgdata 47252maxresident)k
0inputs+8outputs (0major+17966minor)pagefaults 0swaps
make: *** [hsccf] Error 1
